# NeoRMControl_OneForALL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  imgui.ini
doc/: hardware_manager.md
include/: bullet_solver.hpp  can.hpp  chassis.hpp  chassis_ctrl.hpp  chassis_steering.hpp  chassis_task.hpp  chassis_types.hpp  config.hpp  gimbal.hpp  gimbal_task.hpp  gimbgal.hpp  hardware.hpp  hardware_callback.hpp  hardware_list.hpp  hardware_list_base.hpp  hardware_manager.hpp  io.hpp  io_callback.hpp  kb_ctrl.hpp  motor.hpp  motor_sender.hpp  pid.h  pid_controller.hpp  ramp.hpp  ramp_controller.hpp  rc_ctrl.hpp  robot.hpp  robot_controller.hpp  serial_interface.hpp  shoot.hpp  socket_interface.hpp  types.hpp  ui.hpp  user_lib.hpp  utils.hpp
include/chassis/: chassis.hpp  chassis_config.hpp  mecanum.hpp  omni.hpp  swerve.hpp
include/device/: cv_controller.hpp  deviece_base.hpp  imu.hpp
src/: .main.cc.swp  main.cc
src/chassis/: chassis.cc  chassis_ctrl.cc  chassis_steering.cc  chassis_task.cc  mecanum.cc  omni.cc  swerve.cc
src/control/: bullet_solver.cc  pid_controller.cc  ramp.cc  ramp_controller.cc
src/controller/: kb_ctrl.cc
src/device/: cv_controller.cc  device_base.cc  imu.cc
src/gimbal/: gimbal.cc  gimbal_task.cc
src/hardware/: can.cc  hardware.cc  motor.cc  motor_sender.cc  serial_interface.cc
src/input/: kb_ctrl.cc
src/io/: io.cc  raygui.cc  rc_ctrl.cc  socket_interface.cc  ui.cc
src/motor/: motor.cc
src/pid/: pid_controller.cc
src/robot_controller/: robot.cc  robot_controller.cc
src/shoot/: shoot.cc
src/support/: user_lib.cc
